[metadata]
name = memory_profiler
description = A module for monitoring memory usage of a python program
long_description = file: README.rst
version = attr: memory_profiler.__version__
license = BSD
license_files = COPYING
author = Fabian Pedregosa
author_email = f@bianp.net
url = https://github.com/pythonprofilers/memory_profiler
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Operating System :: POSIX
    Operating System :: Unix

[options]
py_modules =
    memory_profiler
    mprof
python_requires = >=3.7
install_requires = psutil

[options.entry_points]
console_scripts =
    mprof = mprof:main
